fixed z-index problem

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -46,18 +46,15 @@ td {
 * {
   scrollbar-width: thin; 
   scrollbar-color: $color-gray-mid $color-gray-dark;
-  z-index: 100;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: $color-gray-mid;
   border-radius: 4px;
-  z-index: 100;
 }
 
 *::-webkit-scrollbar-track {
   background-color: $color-gray-dark;
-  z-index: 100;
 }
 
 .icon-button {
